--- a/tools/oas-apigee-mock/.github/workflows/apigeemock.yml
+++ b/tools/oas-apigee-mock/.github/workflows/apigeemock.yml
@@ -40,7 +40,7 @@ jobs:
       - name: run npm install
         run: npm install
       - name: Generate bundle from swagger
-        run: node bin/oas-apigee-mock generateApi petstore-apiproxy -s petstore-example.yaml -o
+        run: node bin/tools/oas-apigee-mock/petstore-example.yaml -s petstore-example.yaml -o
       - name: Create API bundle
         run: zip -r proxy.zip apiproxy
       - name: Set output
